--- a/app_server/views/anasayfa.pug
+++ b/app_server/views/anasayfa.pug
@@ -1,75 +1,30 @@
 extends layout
-
+include fonksiyonlar/yildiz
 block content
   #banner.page-header
     .row 
       .col-lg-6 
-        h1 
-          | MekanBul 
-          small &nbsp; Civardaki mekanları keşfet!
+        h1= sayfaBaslik.siteAd
+          small &nbsp;  #{sayfaBaslik.slogan}
   .row 
-    .row.list-group 
-    .col-xs-12.col-sm-12 
-      .col-xs-12.list-group-item  
-        h4  
-          a(href='/mekan') Starbucks
-          small &nbsp;
-          span.glyphicon.glyphicon-star
-          span.glyphicon.glyphicon-star
-          span.glyphicon.glyphicon-star
-          span.glyphicon.glyphicon-star-empty
-          span.glyphicon.glyphicon-star-empty 
-        span.badge.pull-right.badge-default 12km
-        p.address Centrum Garden AVM
-        p 
-          span.label.label-warning Dünya Kahveleri
-          | &nbsp;
-          span.label.label-warning Kekler
-          | &nbsp;
-          span.label.label-warning Termoslar ve diğer eşyalar
+    each mekan in mekanlar 
+      .row.list-group 
+      .col-xs-12.col-sm-12 
+        .col-xs-12.list-group-item  
+          h4  
+            a(href='/mekan') #{mekan.ad}
+            small &nbsp;
+            +puanOlustur(mekan.puan)
+            
+          span.badge.pull-right.badge-default #{mekan.mesafe}
+          p.address #{mekan.adres}
+          p 
+            each imkan in mekan.imkanlar
+              span.label.label-warning #{imkan}
+              | &nbsp;
+              
 
 
-  .row 
-    .row.list-group 
-    .col-xs-12.col-sm-12 
-      .col-xs-12.list-group-item  
-        h4  
-          a(href='/mekan') Yayla Taş Fırını
-          small &nbsp;
-          span.glyphicon.glyphicon-star
-          span.glyphicon.glyphicon-star
-          span.glyphicon.glyphicon-star
-          span.glyphicon.glyphicon-star
-          span.glyphicon.glyphicon-star 
-        span.badge.pull-right.badge-default 2km
-        p.address Bahçelievler, 108. Cd Merkez/Isparta
-        p 
-          span.label.label-warning Unlu Mamüller
-          | &nbsp;
-          span.label.label-warning Pasta Ve Tatlılar
-          | &nbsp;
-          span.label.label-warning Pastane-Cafe
+    
 
-  .row 
-    .row.list-group 
-    .col-xs-12.col-sm-12 
-      .col-xs-12.list-group-item  
-        h4  
-          a(href='/mekan') Arabica
-          small &nbsp;
-          span.glyphicon.glyphicon-star
-          span.glyphicon.glyphicon-star
-          span.glyphicon.glyphicon-star
-          span.glyphicon.glyphicon-star
-          span.glyphicon.glyphicon-star 
-        span.badge.pull-right.badge-default 4km
-        p.address Iyaş Park AVM
-        p 
-          span.label.label-warning Dünya Kahveleri
-          | &nbsp;
-          span.label.label-warning Kekler
-          | &nbsp;
-          span.label.label-warning Soğuk İçecekler
-
-
-          
+            
